--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/bank_system
     username: postgres
-    password: admin
+    password: postgres
     hikari:
       maximumPoolSize: 15
   jpa:
